// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gets limits for a role Works for existing roles 1`] = `
[
  {
    "global": 5,
    "per_role": {
      "user": 4,
    },
    "state": "enabled",
  },
  {
    "global": 6,
    "per_role": {
      "user": 5,
    },
    "state": "enabled",
  },
  {
    "global": {},
    "per_role": {
      "user": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "user": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "user": undefined,
    },
    "state": "disabled",
  },
]
`;

exports[`Gets limits for a role Works for existing roles 2`] = `
[
  {
    "global": 5,
    "per_role": {
      "new_role": 2,
    },
    "state": "enabled",
  },
  {
    "global": 6,
    "per_role": {
      "new_role": 2,
    },
    "state": "enabled",
  },
  {
    "global": {},
    "per_role": {
      "new_role": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "new_role": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "new_role": undefined,
    },
    "state": "disabled",
  },
]
`;

exports[`Gets limits for a role Works for existing roles 3`] = `
[
  {
    "global": 5,
    "per_role": {
      "test_role": 5,
    },
    "state": "enabled",
  },
  {
    "global": 6,
    "per_role": {
      "test_role": 6,
    },
    "state": "enabled",
  },
  {
    "global": {},
    "per_role": {
      "test_role": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "test_role": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "test_role": undefined,
    },
    "state": "disabled",
  },
]
`;

exports[`Gets limits for a role Works for existing roles 4`] = `
[
  {
    "global": 5,
    "per_role": {
      "editor": 3,
    },
    "state": "enabled",
  },
  {
    "global": 6,
    "per_role": {
      "editor": 3,
    },
    "state": "enabled",
  },
  {
    "global": {},
    "per_role": {
      "editor": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "editor": undefined,
    },
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {
      "editor": undefined,
    },
    "state": "disabled",
  },
]
`;

exports[`Gets limits for a role Works for unknown roles 1`] = `
[
  {
    "global": 5,
    "per_role": {},
    "state": "global",
  },
  {
    "global": 6,
    "per_role": {},
    "state": "global",
  },
  {
    "global": {},
    "per_role": {},
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {},
    "state": "disabled",
  },
  {
    "global": -1,
    "per_role": {},
    "state": "disabled",
  },
]
`;
